finishing index.html

--- a/index.html
+++ b/index.html
@@ -33,4 +33,11 @@
         </article>
 
       </section>
+
+      <footer>
+        <center>&copy; 2018 <br/>
+          <a href="#">Terms of Service</a>
+        </center>
+      </footer>
+
   </body>
